--- a/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/Properties/Resources.resx
+++ b/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/Properties/Resources.resx
@@ -118,13 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="dark_add@2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark_add@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_x@2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark_x@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="AdvSearchIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\AdvSearchIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dark_add@2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dark_add@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="dark_list---add@2x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dark_list---add@2x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
